src/main/webapp/css/style.css
/* ... */
.w3view-cart.btn {
  border: none;
  box-shadow: none !important;
}

/*booked*/
.nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link {

  font-size: 19px;
  color: black;

}

.nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link.active {
  color: white;
  background-color: #F28102;
  border-color: #F28102;

}

.btn-prev-slider {
  transform: rotate(-180deg);
}

button.disible {
  cursor: not-allowed;
  opacity: 0.1;
}

.btn-pagination {
  padding: 8px 16px;
}

.btn-pagination.active {
  background-color: #fb6027;
  color: #fff;

}

span.px-2.bg-danger.border-0.text-light.sum-num-cart {
  position: absolute;
  top: -14px;
  height: fit-content;
  width: fit-content;
  border-radius: 100%;
}

